tests/valid_programs_krivka_tests/whitespaces.tl
require "ifj21"
function whitespaces
()
local 
s 
: 
string 
= 
"\x3A0"write(s, "\n")
s = "a\255b"
write(s
, 
"\n")local x:integer=0
-
1write(x)
end whitespaces()
