tests/semantic_errors/andrei1_6.tl
require"ifj21"

-- wrong arithm type
function main()
    local id : integer = 34 - "str"
end

main()
